Updated stylesheet alignment issues

--- a/poem_3_ways/style.css
+++ b/poem_3_ways/style.css
@@ -45,6 +45,7 @@ body{
 }
 
 .box{
+    display:block;
     background-color: #CFD9E0;
 }
 .stanza1{
@@ -77,7 +78,6 @@ body{
 
     body{
         background-image: linear-gradient(#C1DEE9,#050A2B);
-        color:white;
         line-height:2em;
         letter-spacing:1px;
         word-spacing: 3px;
@@ -85,28 +85,34 @@ body{
     .menu{
         background-color:#66788D;
         width:85%;
+        text-align:right;
+        
     }
     
     .title{
+        color:white;
         margin-left:15px;
         font-weight:lighter;
     }
     
     .author{
+        color:white;
         margin-top:-1.5em;
 
     }
     
     .statement{
+        color:white;
         margin-top:-1em;
         margin-left:15px;
         font-weight:lighter;
         font-size:.75em;
         letter-spacing:2px;
+        line-height:1.25em;
     }
     .main{
-        margin-left:20%;
-        width: 55%;
+        margin-left:5%;;
+        width: 300px;
     }
     
     .box{
@@ -116,18 +122,21 @@ body{
         margin-left:5%;
         padding-top:3%;
         letter-spacing:2px;
+        font-size:.95em;
     }
     
     .stanza2{
         margin-left:5%;
         padding-top:3%;
         letter-spacing:2px;
+        font-size:.95em;
     }
     
     .stanza3{
         margin-left:5%;
         padding-top:3%;
         letter-spacing:2px;
+        font-size:.95em;
     }
     
     .stanza4{
@@ -135,6 +144,7 @@ body{
         padding-top:3%;
         letter-spacing:2px;
         padding-bottom:3%;
+        font-size:.95em;
     }
 }
 
@@ -146,14 +156,38 @@ body{
         color:#050A2B;
     }
     .menu{
-        margin-top:25%;
-        margin-left:-20%;
+        margin-top:5%;
+        margin-left:15%;
         width:60%;
-        transform-origin: top space left;
+        transform-origin: top left;
         transform: rotate(90deg);
     }
     .main{
         margin-left:30%;
         background-color:#E9EEF1;
+    }
+    .stanza1{
+        margin-left:7%;
+        padding-top:3%;
+        letter-spacing:2px;
+    }
+    
+    .stanza2{
+        margin-left:7%;
+        padding-top:3%;
+        letter-spacing:2px;
+    }
+    
+    .stanza3{
+        margin-left:7%;
+        padding-top:3%;
+        letter-spacing:2px;
+    }
+    
+    .stanza4{
+        margin-left:7%;
+        padding-top:3%;
+        letter-spacing:2px;
+        padding-bottom:3%;
     }
 }
